updated node and javascript to process links and iframes when needed

--- a/views/iframe.hbs
+++ b/views/iframe.hbs
@@ -1,1 +1,7 @@
-YEY iFrame!!
+<script type="text/javascript">
+	$(document).ready(function(){
+		$("h4 span").text(window.location);
+	})
+</script>
+
+<h4>My URL is <span></span></h4>
