--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{{title}}</title>
+    <title>Proof of concept of link and iframe redirector</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <script type="text/javascript" src="/plugins/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="/javascripts/script.js"></script>
