--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,17 +1,19 @@
-<h1>HTML Ipsum Presents</h1>
+<h1>Testing Redirector</h1>
          
-<p><strong>Pellentesque habitant morbi tristique</strong> senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. <em>Aenean ultricies mi vitae est.</em> Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, <code>commodo vitae</code>, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. <a href="#">Donec non enim</a> in turpis pulvinar facilisis. Ut felis.</p>
+<p><strong>Pellentesque habitant morbi tristique</strong> senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. <em>Aenean <a href="http://www.external-domain.com">This link should go through redirector</a>.</em> Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, <code>commodo vitae</code>, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. <a href="/path/">this one should not</a> in turpis pulvinar facilisis. Ut felis.</p>
 
 <h2>Header Level 2</h2>
 
-<iframe src="/iframe?this=that" width="400" height="200"></iframe>
+<iframe src="http://localhost:3000/iframe?shouldBeRepalced=true&id={pmoID}" width="400" height="200"></iframe>
+
+<iframe src="/iframe?shouldBeRepalced=false&id={pmoID}" width="400" height="200"></iframe>
          
 <ol>
-   <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</li>
+   <li>Lorem ipsum dolor <a href="/path/to/file.aspx?foo={bar}">should not go through redirector, or be replaced</a> adipiscing elit.</li>
    <li>Aliquam tincidunt mauris eu risus.</li>
 </ol>
 
-<blockquote><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus magna. Cras in mi at felis aliquet congue. Ut a est eget ligula molestie gravida. Curabitur massa. Donec eleifend, libero at sagittis mollis, tellus est malesuada tellus, at luctus turpis elit sit amet quam. Vivamus pretium ornare est.</p></blockquote>
+<blockquote><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus magna. Cras in mi <a href="http://localhost:3000?anotherID={pmoID}">this one should go through redirector, therefore getting replaced</a>. Ut a est eget ligula molestie gravida. Curabitur massa. Donec eleifend, libero at sagittis mollis, tellus est malesuada tellus, at luctus turpis elit sit amet quam. Vivamus pretium ornare est.</p></blockquote>
 
 <h3>Header Level 3</h3>
 
